<resources>
    <string name="app_name">AQP-TOUR</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="contrasena">Contrasena</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="nombres">Nombres</string>
    <string name="apellido">Apellido</string>
    <string name="Resgitrar">Registrar</string>
    <string name="ingles">Ingles</string>
    <string name="frances">Frances</string>
    <string name="Login">Login</string>
    <string name="espanol">Español</string>
    <!--patrick-->
    <string name="left_arrow"><![CDATA[<]]></string>
    <string name="right_arrow"><![CDATA[>]]></string>
</resources>


