<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inicio2"
    android:weightSum="1">
    <!--para mejorar se podria mostrar el clima-->
    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/lluvia" />

    <!--android:background="@drawable/bg_anim"-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="87dp"
        android:gravity="center_vertical|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/custom_theme_color"
            android:onClick="buscar"
            android:text="@string/Login" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/custom_theme_color"
            android:onClick="ejecutaregistrar"
            android:text="@string/Resgitrar" />

        <Button
            android:id="@+id/idioma2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/custom_theme_color"
            android:onClick="iniciar2"
            android:text="@string/frances" />

        <Button
            android:id="@+id/idioma1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/custom_theme_color"
            android:onClick="iniciar2"
            android:text="@string/ingles" />

        <Button
            android:id="@+id/idioma3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/custom_theme_color"
            android:onClick="iniciar2"
            android:text="@string/espanol" />
    </LinearLayout>

</FrameLayout>