<?xml version="1.0" encoding="utf-8"?>
    <!-- android:gravity  esto lo pone en el centro recuerda -->
    <!--deiseño liquido es un diseño general sin importar el dispositivo-->
    <!-- cada boton va a tener peso android:layout_weight , -->
    <!--esto lo inclui para el ojito android.support.design.widget.TextInputLayout -->
    <!--android:weightSum="4"-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center_vertical|center_horizontal"

android:orientation="vertical"
tools:context="com.example.patrickdz96.aqp_tour.Login">

<ImageView
    android:layout_width="236dp"
    android:layout_height="234dp"
    android:background="#FFFFBB33"
    android:contentDescription="@string/app_name"
    android:scaleType="center"
    android:src="@drawable/plaza" />

<android.support.design.widget.TextInputLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="11"
        android:hint="@string/username"
        android:inputType="textPersonName"
         />
</android.support.design.widget.TextInputLayout>

<!-- espacion entre los elementos-->
<android.support.v4.widget.Space
    android:layout_width="0dp"
    android:layout_height="10dp" />

<android.support.design.widget.TextInputLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:passwordToggleEnabled="true">

    <EditText
        android:id="@+id/contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="11"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
         />
</android.support.design.widget.TextInputLayout>
<!-- wrap_content que se adante al contenido en layout_height-->
    <Button
        android:id="@+id/login"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:text="Entrar" />

    <Button
        android:id="@+id/regresar"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:onClick="regresar"
        android:text="regresar" />
</LinearLayout>
